src/test/ui/const-generics/issues/issue-56445.min.stderr
error[E0771]: use of non-static lifetime `'a` in const generic
  --> $DIR/issue-56445.rs:8:26
   |
LL | struct Bug<'a, const S: &'a str>(PhantomData<&'a ()>);
   |                          ^^
   |
   = note: for more information, see issue #74052 <https://github.com/rust-lang/rust/issues/74052>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0771`.
